--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
@@ -8,7 +10,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-storage": "^1.0.1",
+    "react-native-svg": "^13.3.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
