--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "^13.3.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
