--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "@react-navigation/native": "^6.0.13",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
+    "dayjs": "^1.11.5",
     "expo": "^46.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
