--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "dayjs": "^1.11.5",
@@ -16,6 +17,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
