--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@ui-kitten/components": "^5.1.2",
@@ -13,10 +14,12 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.2.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7"
   },
