--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
@@ -12,6 +13,7 @@
     "expo": "^46.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.37.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
     "react-native-pager-view": "5.4.24",
