--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,12 @@
     "dayjs": "^1.11.5",
     "expo": "^46.0.0",
     "react": "18.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.37.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "5.4.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
