--- a/app/package.json
+++ b/app/package.json
@@ -24,8 +24,8 @@
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.2.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.7",
-    "uuid": "^9.0.0"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
