--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,9 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "antd": "^4.23.6",
+    "antd": "^5.1.6",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
