--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "workspaces": [
-    "projects/*",
+    "types",
     "packages/*"
   ],
   "scripts": {
