--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zk/types": "workspace:*",
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.2.2",
     "axios": "^1.3.4",
