--- a/package.json
+++ b/package.json
@@ -1,24 +1,43 @@
 {
-  "name": "grad-project-monorepo",
-  "version": "0.0.0",
-  "private": true,
-  "workspaces": [
-    "types",
-    "packages/*"
-  ],
+  "name": "grad-app",
+  "version": "1.0.0",
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.2",
+    "expo": "~48.0.4",
+    "expo-cli": "^6.3.2",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.0.0-rc5",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-web-browser": "~12.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "prettier": "latest",
-    "turbo": "latest",
-    "typescript": "^4.9.5"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "@types/react-native": "^0.71.3",
+    "jest": "^29.2.1",
+    "jest-expo": "~48.0.0",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^4.9.4"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "packageManager": "pnpm@7.27.0"
+  "private": true
 }
