--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,6 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read more about this file */
-    "target": "esnext",
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "declaration": true,
-    "sourceMap": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "strict": true,
-    "isolatedModules": true,
-    "noFallthroughCasesInSwitch": true,
-    "jsx": "react-jsx",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "downlevelIteration": true
-  },
-  "include": ["packages", "projects"],
-  "exclude": ["**/node_modules"]
+    "strict": true
+  }
 }
