--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.3.4",
     "expo": "~48.0.4",
     "expo-cli": "^6.3.2",
     "expo-font": "~11.1.1",
