--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^4.10.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
