--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-storage": "^1.0.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
