--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.43.5",
     "react-native": "0.71.3",
     "react-native-calendars": "^1.1293.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-storage": "^1.0.1",
