--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "expo": "~48.0.4",
     "expo-cli": "^6.3.2",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-notifications": "~0.18.1",
