--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.58.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
