--- a/web/package.json
+++ b/web/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "web",
+  "name": "web-project",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
-    "antd": "^5.2.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
+    "antd": "^5.3.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "sass": "^1.58.3"
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.0.3"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "@types/js-cookie": "^3.0.3"
   }
 }
