--- a/admin/package.json
+++ b/admin/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.8.0",
     "antd": "^5.0.7",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "less": "^4.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
