--- a/admin/package.json
+++ b/admin/package.json
@@ -12,11 +12,13 @@
     "@ant-design/icons": "^4.8.0",
     "antd": "^5.0.7",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "less": "^4.1.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.5.0",
