--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@motify/components": "^0.18.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
@@ -35,6 +37,7 @@
     "react-hook-form": "^7.43.5",
     "react-native": "0.71.3",
     "react-native-calendars": "^1.1293.0",
+    "react-native-reanimated": "2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-storage": "^1.0.1",
