--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.3.4",
     "expo": "~48.0.4",
+    "expo-av": "~13.2.1",
     "expo-cli": "^6.3.2",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
