--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.3.4",
+    "buffer": "^6.0.3",
     "expo": "~48.0.4",
     "expo-av": "~13.2.1",
     "expo-cli": "^6.3.2",
